examples/neg/high_loop_no_grow/alice.oio
ALICE

channel BOB/B2@{H} : int@{H} [ALICE/A2: 1;BOB/B2: 1];

A2@{H} (secret : int@{H}) [ALICE/A2: 1;BOB/B2: 1] {
    print("ALICE/A2 received", secret);
    send(BOB/B2, secret+1);
}
